--- a/staytion-hub-client/package.json
+++ b/staytion-hub-client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
